fix album title spill over description for very long titles

--- a/kset/staticfiles/frontend/css/styles.css
+++ b/kset/staticfiles/frontend/css/styles.css
@@ -1597,7 +1597,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1242528', e
     margin: 0 auto 0 10px;
     height: 1.5em;
     padding-top:1em;
-    margin-bottom:3em;
+    margin-bottom:5em;
 }
 
 .album-title h2 {
